--- a/templates/youtrack.service.j2
+++ b/templates/youtrack.service.j2
@@ -4,8 +4,8 @@ Description=Youtrack
 [Service]
 Type=simple
 RemainAfterExit=true
-ExecStart={{ youtrack_releases_dir }}/youtrack-{{ youtrack_version }}/bin/youtrack.sh start --no-browser
-ExecStop={{ youtrack_releases_dir }}/youtrack-{{ youtrack_version }}/bin/youtrack.sh stop
+ExecStart={{ youtrack_home_dir }}/youtrack.sh start --no-browser
+ExecStop={{ youtrack_home_dir }}/youtrack.sh stop
 User={{ youtrack_user }}
 RestartSec=5
 Restart=on-failure
